@@ -1,5 +1,5 @@
 ;;; gfunc.el --- support for generic function
-;;; Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2015, 2016, 2017
+;;; Copyright (C) 2005-2018
 ;;;   HIRAOKA Kazuyuki <khi@users.sourceforge.jp>
 ;;; $Id: gfunc.el,v 1.16 2011-12-31 15:07:29 hira Exp $
 ;;;
